--- a/app/src/main/res/layout/activity_kontrole.xml
+++ b/app/src/main/res/layout/activity_kontrole.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".KontroleActivity">
 
+    <ImageView
+        android:id="@+id/slikaRobota"
+        android:layout_width="88dp"
+        android:layout_height="93dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.171"
+        app:srcCompat="@drawable/mranger_icon_v2" />
 </android.support.constraint.ConstraintLayout>
